# CO650_TASK1

./: CMakeLists.txt  README.md  main.cpp
include/: DrawableGameComponent.h  Game.h  GameComponent.h  MemberVariableUnsetException.h
src/: DrawableGameComponent.cpp  Game.cpp  GameComponent.cpp  MemberVariableUnsetException.cpp
